src/components/Utility/Hero/Hero.module.scss
@import "../../../vars";

.Hero {
  @include flex(column, flex-start, center);

  // background: linear-gradient(
  //   rgba(white, 0.8),
  //   rgba(white, 0.6),
  //   rgba(white, 0.8)
  // );

  // background-position: center;
  background-size: cover;
  opacity: 1 !important;
  width: 100%;
  margin-top: 15rem;
}

.Home {
  min-height: 95vh;

  @include min-width(768px) {
    min-height: 84vh;
  }
}

.Page {
  min-height: 70vh;
}

